--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1"
