--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
@@ -34,6 +35,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/node": "^20.8.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
