--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "npx prettier --write .",
-    "test": "vitest"
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   },
   "dependencies": {
     "@apollo/client": "^3.8.6",
@@ -38,22 +42,28 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/node": "^20.8.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-test-renderer": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "happy-dom": "^12.10.3",
     "husky": "^8.0.3",
+    "jsdom": "^22.1.0",
     "prettier": "^3.0.3",
     "pretty-quick": "^3.1.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.0",
     "vitest": "^0.34.6"
   }
 }
