--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,6 @@
 
     "types": ["vitest/globals"]
   },
-  "include": ["src"],
+  "include": ["src", ".src/test/setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
