--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^10.16.4",
     "graphql": "^16.8.1",
     "lodash": "^4.17.21",
+    "playwright": "^1.40.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -41,6 +42,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.2",
