--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,7 +62,7 @@
     "prettier": "^3.0.3",
     "pretty-quick": "^3.1.3",
     "react-test-renderer": "^18.2.0",
-    "typescript": "^5.3.2",
+    "typescript": "4.9",
     "vite": "^5.0.0",
     "vitest": "^0.34.6"
   }
